# pajama-talk

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  context.py  engagement.py  grammar.py  health.py  learning.py  speaking.py  stats.py  words.py
backend/app/core/: config.py  languages.py  security.py
backend/app/db/: migrations.py  session.py
backend/app/domain/: __init__.py  chat.py  realtime_events.py  voice.py
backend/app/models/: __init__.py  chat.py  user.py  word.py
backend/app/schemas/: auth.py  context.py  engagement.py  grammar.py  learning.py  speaking.py  stats.py  word.py
backend/app/services/: ai_prompts.py  ai_provider.py  ai_service.py  chat_persistence.py  chat_rooms.py  grammar.py  language_course.py  meme_factory.py  oracle_service.py  pronunciation_service.py  realtime_chat.py  srs.py  voice_service.py  websocket_guard.py
backend/tests/: test_api.py
frontend/: build.gradle.kts  gradle.properties  settings.gradle.kts
frontend/androidApp/: build.gradle.kts
frontend/desktopApp/: build.gradle.kts
frontend/gradle/: libs.versions.toml
frontend/shared/: android-target.gradle  build.gradle.kts
scripts/: clean-workspace.ps1
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: smoke.spec.ts
web/src/: App.tsx  api.ts  i18n.ts  styles.css  vite-env.d.ts
web/src/hooks/: useLearningDataController.ts  (+3 more)
(+26 files in other folders)
